# news-web-scraping

./: .env  .gitignore  README.md  pyproject.toml
src/: headlines.txt  scraper.py  setup.py
